# A_avenger

./: CMakeLists.txt  main.cpp
classes/: alien_stright_one.cpp  alien_stright_one.hpp  back_fon.cpp  back_fon.hpp  hero.cpp  hero.hpp  image_texture.cpp  image_texture.hpp  laser.cpp  laser.hpp  ship.hpp  star.cpp  star.hpp  text_texture.cpp  text_texture.hpp  texture.cpp  texture.hpp
engine/: crossing.cpp  crossing.hpp  engine.cpp  engine.hpp  myrand.cpp  myrand.hpp
types_consts/: aliens_consts.hpp  backfon_consts.hpp  backs_type.hpp  border_consts.hpp  border_type.hpp  fleet_type.hpp  game_consts.hpp  graph_consts.hpp  hero_consts.hpp  hero_type.hpp  menu_consts.hpp  sdl_type.hpp  star_consts.hpp  test.hpp  text_consts.hpp  text_type.hpp  vects_type.hpp  visibility_vects.hpp  weapon_store_type.hpp  weapon_type.hpp
video_engine/: video_engine.cpp  video_engine.hpp
